--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -52,3 +52,21 @@ a h1 {
   margin-bottom: 10px;
   text-align: center;
 }
+
+.options {
+  text-align: left;
+}
+
+.option {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 5px;
+}
+
+.option button {
+  margin-right: 10px;
+}
+
+.invert {
+  filter: invert();
+}
